# fsrtools

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
fsrtools/: __init__.py  _paramset.py  _util.py  experiment_manager.py  paramset.py  plot_manager.py  simulate_tools.py  simulatetools.py  util.py  view_tools.py
fsrtools/config/: .gitignore  commands.json  commands_test.json
fsrtools/plot_manager/: __init__.py  plot_manager.py
fsrtools/simulate_tools/: command_manager.py  log_check.py
fsrtools/simulation_tools/: __init__.py  _manager_utils.py  _simulation_manager.py  simulation_manager.py
fsrtools/utils/: __init__.py  colors.py  command_manager.py  log_check.py  log_manager.py  set_total_combinations.py  setting_manager.py  stop_watch.py
test/: create_data.py  hello_world.py  parameter_test.json  test_command_manager.py  test_log_check.py  test_plot_manager.py  test_simulate_tools.py  test_simulation_manager.py  test_tools.py  test_view_tools.py
test/2019-10-18-22-28-08/: parameter.json
test/2019-10-18-22-28-08/experiment_1/: parameter.json
test/2019-10-18-22-28-08/experiment_1/number-1/: parameter.json
test/2019-10-18-22-28-08/experiment_2/: parameter.json
test/2019-10-18-22-28-08/experiment_2/number-1/: parameter.json
test/2019-10-18-22-28-08/experiment_2/number-2/: parameter.json
test/2019-10-18-22-28-08/experiment_3/: parameter.json
tutorial/: create_data.py  hello_world.py  parameter_create_data.json  parameter_hello_world.json  parameter_test.json
(+1 files in other folders)
