[metadata]
name = fsrtools
version = 1.0.0
description=Numerical experiment manager handling result plots and scheduling simulations
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
[options]
install_requires = 
[aliases]
test = pytest
[tool:pytest]
addopts = --verbose
python_files = test/test_*.py
