[metadata]
name = fsrtools
author = F Ishikawa
version = 1.2.1
description = fsrtools: a package managing numerical simulations,
[options]
install_requires = 
    numpy
    scipy>=1.1
    matplotlib>=2.0
    pytest>=4.0
    ipython>=7.0.0
    plotly==4.12.0
    pandas==1.2.3
[aliases]
test = pytest
[tool:pytest]
addopts = --verbose
python_files = test/test_*.py
